--- a/style.css
+++ b/style.css
@@ -103,7 +103,67 @@
     padding: 50px;
 }
 
-/* End about me  styles */
+/* End about me styles */
+
+/* Project page styles */
+
+.projects {
+    padding: 30px 0;
+    margin-top: 25px;
+}
+
+.projectPic {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.projectsContainer {
+    display: flex;
+    justify-content: center;
+    min-height: 200px;
+}
+
+.projectTitle {
+    margin-bottom: 10px;
+}
+
+.projectCard {
+    text-align: center;
+    width: 25%;
+    flex-wrap: wrap;
+    background-color: #fff;
+    padding: 20px;
+    margin: 10px;
+}
+
+/* End project page styles */
+
+/* Style the buttons that are used to open and close the accordion panel */
+
+.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+}
+
+.active,
+.accordion:hover {
+    background-color: #ccc;
+}
+
+.panel {
+    padding: 0 18px;
+    display: none;
+    background-color: white;
+    overflow: hidden;
+}
 
 /* Footer Styles */
 
@@ -115,17 +175,9 @@
     text-align: center;
 }
 
-.footer-content h3 {
+.footerContent h3 {
     font-size: 2.1rem;
     line-height: 3rem;
-    color: white;
-}
-
-.footer-content p {
-    max-width: 500px;
-    margin: 10px auto;
-    line-height: 28px;
-    font-size: 14px;
     color: white;
 }
 
