skeleton for resume and links pages created. Styling change for header and footer

--- a/style.css
+++ b/style.css
@@ -1,25 +1,41 @@
 :root {
     --blue: #181d66;
     --grey: #585c6e;
+    --offwhite: #f5f5f5;
+    --box-shadow: 0 6px 6px -6px rgba(0, 0, 0, .5);
+}
+
+body {
+    margin: 0;
+}
+
+ul {
+    list-style: none;
+}
+
+.nav {
+    height: 100px;
+    width: 100%;
 }
 
 .topnav {
-    background-color: var(--grey);
+    background-color: var(--offwhite);
     width: 100%;
+    height: 100px;
     overflow: hidden;
     display: flex;
     position: sticky;
     z-index: 1;
     align-items: center;
     justify-content: space-around;
-    margin-bottom: 20px;
+    box-shadow: var(--box-shadow);
 }
 
 /* Style the links inside the navigation bar */
 
 .topnav a {
     float: left;
-    color: white;
+    color: var(--grey);
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -29,8 +45,11 @@
 /* Change the color of links on hover */
 
 .topnav a:hover {
-    background-color: var(--blue);
-    color: white;
+    border-bottom: 1px solid var(--grey);
+}
+
+.topnav a.active {
+    border-bottom: 1px solid var(--grey);
 }
 
 .mobile-menu {
@@ -136,8 +155,6 @@
     margin: 10px;
 }
 
-/* End project page styles */
-
 /* Style the buttons that are used to open and close the accordion panel */
 
 .accordion {
@@ -153,7 +170,6 @@
     transition: 0.4s;
 }
 
-.active,
 .accordion:hover {
     background-color: #ccc;
 }
@@ -164,6 +180,134 @@
     background-color: white;
     overflow: hidden;
 }
+
+/* End project page styles */
+
+/* Start resume page styles */
+
+.resumeContainer {
+    width: 100%;
+    margin-top: 20px;
+    background: white;
+    display: flex;
+    flex-direction: row;
+    font-size: 20px;
+}
+
+#sidebar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 350px;
+    margin: 25px;
+    height: 100%;
+    line-height: 2;
+}
+
+#sidebar img {
+    width: 75%;
+}
+
+.sidebarContainer {
+    margin: 0 25px 0 25px;
+    height: 800px;
+    background-color: var(--offwhite);
+    box-shadow: var(--box-shadow);
+}
+
+.information {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.topbox,
+.bottombox {
+    width: 100%;
+}
+
+.topbox {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-bottom: 12.5px;
+}
+
+.bottombox {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 12.5px;
+}
+
+.resumeCard {
+    height: 100%;
+    background-color: var(--offwhite);
+    padding: 0 25px 0px 25px;
+    margin-right: 25px;
+    font-size: 18px;
+    flex: 1;
+    box-shadow: var(--box-shadow);
+}
+
+/* End resume page styles */
+
+/* start contact page styles */
+
+.contact {
+    width: 100%;
+    background: white;
+    display: flex;
+    flex-direction: row;
+}
+
+.contactInformation {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.leftbox,
+.rightbox {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    background-color: var(--offwhite);
+    padding: 0 25px 0px 25px;
+    margin-right: 25px;
+    font-size: 18px;
+    flex: 1;
+    box-shadow: var(--box-shadow);
+    height: 70vh;
+}
+
+.leftbox {
+    margin: 0 25px 0 25px;
+    width: 100%;
+    background-color: var(--offwhite);
+    box-shadow: var(--box-shadow);
+}
+
+.rightbox {
+    margin-bottom: 12.5px;
+    width: 100%;
+}
+
+/* .resumeCard {
+    height: 100%;
+    background-color: var(--offwhite);
+    padding: 0 25px 0px 25px;
+    margin-right: 25px;
+    font-size: 18px;
+    flex: 1;
+    box-shadow: var(--box-shadow);
+} */
+
+/* End contect page styles */
 
 /* Footer Styles */
 
@@ -176,9 +320,9 @@
 }
 
 .footerContent h3 {
-    font-size: 2.1rem;
-    line-height: 3rem;
-    color: white;
+    font-size: 30px;
+    line-height: 2;
+    color: var(--grey);
 }
 
 .socials {
@@ -195,15 +339,17 @@
 
 .socials a {
     text-decoration: none;
-    color: #fff;
+    color: var(--grey);
     padding: 10px;
+    font-size: 25px;
 }
 
 footer {
-    background-color: var(--grey);
+    background-color: var(--offwhite);
     padding: 1rem;
     text-align: center;
-    margin: 2rem 0 0;
+    width: 100%;
+    box-shadow: var(--box-shadow);
 }
 
 /* End footer styles */
