--- a/projects/click.css
+++ b/projects/click.css
@@ -65,8 +65,8 @@ button {
 #modal-textbox {
     color: black;
     background-color: white;
-    height: 350px;
-    width: 550px;
+    max-height: 75%;
+    max-width: 85%;
     border-radius: 10px;
     margin: 150px auto;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
