--- a/style.css
+++ b/style.css
@@ -1,13 +1,24 @@
 :root {
-    --blue: #181d66;
     --grey: #585c6e;
     --offwhite: #f5f5f5;
-    --lightblue: #26ACE2;
     --box-shadow: 0 6px 6px -6px rgba(0, 0, 0, .5);
 }
 
 body {
     margin: 0;
+    min-height: 100vh;
+}
+
+h1,
+h2,
+h3,
+h4 {
+    font-family: 'Roboto', sans-serif;
+}
+
+p,
+a {
+    font-family: 'Nunito', sans-serif;
 }
 
 ul {
@@ -41,7 +52,7 @@ a:visited {
 
 .topnav a {
     float: left;
-    color: var(--grey);
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -57,11 +68,12 @@ a:visited {
 
 .topnav a.active {
     border-bottom: 1px solid var(--grey);
+    padding: 13px 16px;
 }
 
 .mobileMenu {
-    color: var(--grey);
-    font-size: 2rem;
+    color: black;
+    font-size: 32px;
     border: 0;
     background-color: transparent;
     cursor: pointer;
@@ -83,11 +95,12 @@ a:visited {
 
 .blurb {
     width: 30%;
-    padding: 0.625rem;
+    padding: 20px;
     border-radius: 6px;
     box-shadow: 0px 2px 15px 2px;
     background-color: rgba(255, 255, 255, 0.678);
     margin: 10%;
+    font-size: 22px;
 }
 
 .blurb p {
@@ -100,7 +113,7 @@ a:visited {
 
 .heading {
     text-align: center;
-    font-size: 3em;
+    font-size: 40px;
 }
 
 .about p {
@@ -145,11 +158,6 @@ a:visited {
 
 /* Project page styles */
 
-.projects {
-    padding: 30px 0;
-    margin-top: 25px;
-}
-
 .projectPic {
     width: 100%;
     border-radius: 10px;
@@ -158,7 +166,6 @@ a:visited {
 .projectsContainer {
     display: flex;
     justify-content: center;
-    min-height: 200px;
 }
 
 .projectTitle {
@@ -214,8 +221,9 @@ a:visited {
 }
 
 .readMore {
+    line-height: 1.5;
     font-size: 20px;
-    padding: 0 18px;
+    padding: 10px 18px;
     display: none;
     background-color: white;
     overflow: hidden;
@@ -292,6 +300,11 @@ a:visited {
     box-shadow: var(--box-shadow);
 }
 
+.resumeCard p {
+    margin-top: -10px;
+    margin-bottom: 20px;
+}
+
 /* End resume page styles */
 
 /* start contact page styles */
@@ -347,17 +360,16 @@ a:visited {
     background-size: cover;
 }
 
-/* .resumeCard {
-    height: 100%;
-    background-color: var(--offwhite);
-    padding: 0 25px 0px 25px;
-    margin-right: 25px;
-    font-size: 18px;
-    flex: 1;
-    box-shadow: var(--box-shadow);
-} */
-
 /* End contect page styles */
+
+/* Footer to the bottom of the page */
+
+.projects,
+.contact,
+.resumeContainer,
+.hero {
+    min-height: calc(100vh - 350px);
+}
 
 /* Footer Styles */
 
@@ -372,7 +384,7 @@ a:visited {
 .footerContent h3 {
     font-size: 30px;
     line-height: 2;
-    color: var(--grey);
+    color: black;
 }
 
 .socials {
@@ -389,7 +401,7 @@ a:visited {
 
 .socials a {
     text-decoration: none;
-    color: var(--grey);
+    color: black;
     padding: 10px;
     font-size: 25px;
 }
@@ -397,7 +409,7 @@ a:visited {
 footer {
     margin-top: 20px;
     background-color: var(--offwhite);
-    padding: 1rem;
+    padding: 15px;
     text-align: center;
     box-shadow: var(--box-shadow);
 }
@@ -432,6 +444,14 @@ footer {
     .topnav.responsive a {
         float: none;
         display: block;
+    }
+    .topnav a:hover {
+        border: none;
+        padding: 14px 16px;
+    }
+    .topnav a.active {
+        border: none;
+        padding: 13px 16px;
     }
     .hero {
         justify-content: center;
